fix: refactored all uio contrast themes stlyling into mixins scss

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,5 +1,6 @@
 // Mixins.
 
+// To adapt to UIO high contrast themes
 @mixin adapt-to-contrastThemes($fColor, $bColor) {
 	// WeCount logo
 	.logo circle,
@@ -65,6 +66,30 @@
 	li .pagination-link,
 	li .pagination-link::before {
 		box-shadow: inset 0 0 0 rem(2) currentColor;
+	}
+
+	#defaultContainer {
+		// fix overlap of box-shadow on buttons
+		.fl-prefsEditor-buttons button {
+			padding-left: rem(3);
+			padding-right: rem(3);
+		}
+
+		// undo default focus/hover styling on next, previous and current pagination
+		.content-wrapper main .pagination .pagination-list {
+			.pagination-next,
+			.pagination-previous,
+			li a[aria-current="page"]::before {
+				box-shadow: none;
+			}
+		}
+
+		// cards and homepage have no background in contrast themes
+		.blue,
+		.green,
+		.yellow {
+			background-image: none;
+		}
 	}
 
 	// Current page pagination styling for uio contrast themes
